packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/003c.py
from gumicorn.http.errors import InvalidRequestMethod
request = InvalidRequestMethod
